--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Page Title - Change this to your name/brand (50-60 characters recommended) -->
-    <title>AybarsNet</title>
+    <title>AybarsNet | Özgür Kitap Ağı</title>
     <link rel="icon" type="image/x-icon" href="/images/avatar.jpg"> <!-- Update this with your own favicon -->
 
     <!-- Meta Description - Write a description (150-160 characters recommended) -->
