daha kısa açklama

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link rel="icon" type="image/x-icon" href="/images/avatar.jpg"> <!-- Update this with your own favicon -->
 
     <!-- Meta Description - Write a description (150-160 characters recommended) -->
-    <meta name="description" content="AybarsNet, yalnızca yasal kitapları arşivleyen; bilgiyi özgürce paylaşmayı, okuma kültürünü herkes için erişilebilir kılmayı amaçlayan bir kitap ağıdır.">
+    <meta name="description" content="AybarsNet, bilgiyi özgürce paylaşmayı, okuma kültürünü herkes için erişilebilir kılmayı amaçlayan bir kitap ağıdır.">
 
     <!-- Keywords -->
     <meta name="keywords" content="Aybarsnet, kedikitap">
